sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort1.scala.error
AlgCocktailSort1:14: error: unclosed character literal
    }'
     ^AlgCocktailSort1:14: error: ';' expected but something found.
    }'
     ^