sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort1.scala.code
def cocktailSort() {
  var n:Int = getNombreValeurs()
  var continue:Int = 0
  for (i <- 0 to n-2){
    continue = 0
    if (plusPetit(i+1,i)){
      echange(i,i+1)
      continue = continue + 1
    }
    'if (plusPetit(n-2-i,n-2-(i+1))){
      echange(n-2-i,n-2-(i+1))
      continue = continue + 1
    }'
    if (continue == 0){return}
	}
}